tests/fixtures/invalid/ord_list.py
# Cannot call ord() with List[int]
x = ord([1, 2, 3])
